Added Trends Chart support
- Added trend chart controller/components/template/view etc to show NEtworks Metrics charts on Container Provider Dashboard.
- Some other minor changes such as moving of parseDate method ot chartMixin so that DashboardUtilsFactory can be removed once ContainerProject Dashboard is also converted.
- And some other minor changes.

https://www.pivotaltracker.com/story/show/147962059

--- a/app/views/ems_container/_show_dashboard.html.haml
+++ b/app/views/ems_container/_show_dashboard.html.haml
@@ -5,6 +5,7 @@
     .col-xs-12.col-sm-12.col-md-6
       = render :partial => "utilization-trend-chart"
     .col-xs-12.col-sm-12.col-md-6
+      = render :partial => "trends-chart"
       = render :partial => "recent-images-line-chart"
   .row.row-tile-pf
     .col-xs-12.col-sm-12.col-md-6
