--- a/app/views/ems_container/_trends-chart.html.haml
+++ b/app/views/ems_container/_trends-chart.html.haml
@@ -1,3 +1,7 @@
-.trend_chart{"ng-controller" => "trendsChartController as vm", :class => "row", 'style' => "display:inline-block; width: 100%;"}
-  %div{:class => "col-md-12"}
-    %pf-trends-chart{'config' => "vm.config", 'chart-data' => "vm.data", 'show-x-axis' => "vm.custShowXAxis", 'show-y-axis' => "vm.custShowYAxis"}
+.trend_chart{"ng-controller" => "trendsChartController as vm"}
+  .card-pf
+    .card-pf-heading
+      %h2.card-pf-title
+        {{vm.data.config.title}}
+    .card-pf-body
+      %pf-trends-chart{'ng-if' => "vm.dataAvailable !== false", 'config' => "vm.config", 'chart-data' => "vm.data", 'show-x-axis' => "vm.custShowXAxis", 'show-y-axis' => "vm.custShowYAxis"}
