--- a/app/views/ems_container/_trends-chart.html.haml
+++ b/app/views/ems_container/_trends-chart.html.haml
@@ -2,6 +2,7 @@
   .card-pf
     .card-pf-heading
       %h2.card-pf-title
-        {{vm.data.config.title}}
+        {{vm.config.headTitle}}
     .card-pf-body
+      .spinner.spinner-lg.loading{"ng-if" => "!vm.loadingDone"}
       %pf-trends-chart{'ng-if' => "vm.dataAvailable !== false", 'config' => "vm.config", 'chart-data' => "vm.data", 'show-x-axis' => "vm.custShowXAxis", 'show-y-axis' => "vm.custShowYAxis"}
