--- a/app/views/cloud_volume_backup/volume_select.html.haml
+++ b/app/views/cloud_volume_backup/volume_select.html.haml
@@ -1,28 +1,5 @@
-%form#form_div{:name => "angularForm",
-               'ng-controller' => "cloudVolumeBackupFormController as vm",
-               "miq-form"      => true,
-               "model"         => "vm.cloudVolumeBackupModel",
-               "model-copy"    => "vm.modelCopy"}
-  = render :partial => "layouts/flash_msg"
-  %h3
-    = _('Basic Information')
-  .form-horizontal
-    .form-group
-      %label.col-md-2.control-label
-        = _('Volume')
-      .col-md-8
-        = select_tag('volume_id',
-                '',
-                'ng-model'                   => 'vm.cloudVolumeBackupModel.volume',
-                'ng-options'                 => 'volume.name for volume in vm.volume_choices',
-                :id                          => 'volume_id',
-                :required                    => '',
-                'pf-select'                  => true)
-        :javascript
-          miqInitSelectPicker();
-
-  = render :partial => 'layouts/angular/generic_form_buttons'
-
+#main_div
+  %cloud-volume-backup-form-component{'cloudVolumeBackupFormId' => ''}
 :javascript
-  ManageIQ.angular.app.value('cloudVolumeBackupFormId', '#{@backup.id}');
-  miq_bootstrap(jQuery('#form_div'));
+  ManageIQ.angular.app.value('cloudVolumeBackupFormId', #{@backup.id});
+  miq_bootstrap('cloud-volume-backup-form-component');
