--- a/app/views/cloud_volume_backup/volume_select.html.haml
+++ b/app/views/cloud_volume_backup/volume_select.html.haml
@@ -1,5 +1,5 @@
 #main_div
-  %cloud-volume-backup-form-component{'cloudVolumeBackupFormId' => ''}
+  %cloud-volume-backup-form-component{'cloud-volume-backup-form-id' => @id}
 :javascript
   ManageIQ.angular.app.value('cloudVolumeBackupFormId', #{@backup.id});
   miq_bootstrap('cloud-volume-backup-form-component');
