--- a/app/views/vm_common/_evacuate.html.haml
+++ b/app/views/vm_common/_evacuate.html.haml
@@ -1,7 +1,7 @@
 - message = n_("1 Instance to be Evacuated", "%{amount} Instances to be Evacuated", @evacuate_items.length) % {:amount => @evacuate_items.length}
-- evacuate_items = @evacuate_items.length == 1 ? @evacuate_items[0].id : ''
+- form_id = @evacuate_items.length == 1 ? @evacuate_items[0].id : ''
 
-%vm-cloud-evacuate-form{'vm-cloud-evacuate-form-id' => 'new', 'message' => message, 'evacuate_items' => evacuate_items}
+%vm-cloud-evacuate-form{'vm-cloud-evacuate-form-id' => form_id, 'message' => message}
 
 
 - if @evacuate_items
