--- a/app/views/ansible_repository/show.html.haml
+++ b/app/views/ansible_repository/show.html.haml
@@ -1,5 +1,7 @@
 #main_div
   - if %w(playbooks).include?(@display)
     = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
+  - elsif @showtype == 'output'
+    = render :partial => 'output'
   - else
     = render :partial => 'layouts/textual_groups_generic'
