--- a/app/views/miq_request/_prov_dialog_volume_fieldset.html.haml
+++ b/app/views/miq_request/_prov_dialog_volume_fieldset.html.haml
@@ -20,11 +20,18 @@
     .add-volume-fieldset
       - keys.each do |key|
         .form-group
-          %label.col-md-2.control-label{:valign => "top"}
+          %label.col-md-4.control-label{:valign => "top"}
             = _(workflow.get_field(key, dialog)[:description])
             - if @edit && workflow.get_field(key, dialog)[:required] && workflow.get_field(key, dialog)[:display] == :edit
               *
-          .col-md-8
+            - if key == :size
+              - if @record
+                %span.pf-blue-info.pficon.pficon-info{:tabindex           => 0,
+                                                      "data-trigger"      => "focus",
+                                                      "data-placement"    => "top",
+                                                      "data-toggle"       => "popover",
+                                                      "data-content"      => @record.try(:decorate).try(:provisioning_volume_size_tooltip)}
+          .col-md-6
             - if workflow.get_field(key, dialog)[:data_type] == :string
               - if @edit && workflow.get_field(key, dialog)[:display] == :edit && !@edit[:stamp_typ]
                 %input.form-control{:type              => "text",
@@ -86,4 +93,8 @@
         counter++;
         return out;
       }
+      $('[data-toggle=popover]').popovers()
+        .on('hidden.bs.popover', function (e) {
+          $(e.target).data('bs.popover').inState.click = false;
+        });
   })();
