--- a/app/views/miq_ae_class/_ns_list.html.haml
+++ b/app/views/miq_ae_class/_ns_list.html.haml
@@ -42,7 +42,7 @@
     - name_readonly = @ae_ns.domain? && !@ae_ns.editable_property?(:name)
     - description_readonly = @ae_ns.domain? && !@ae_ns.editable_property?(:description)
     %namespace-form{:ae_ns_domain => @ae_ns.domain?,
-                    :namespace_path => @sb[:namespace_path],
+                    :namespace_path => @ae_ns.domain? ? "" : @sb[:namespace_path],
                     :namespace_id => @ae_ns.id || 'new',
                     :name_readonly => name_readonly,
                     :description_readonly => description_readonly}
