Further changes to update titles on screen and show toolbar buttons
- Further changes to update titles on screen and show toolbar buttons when Workflow Template record is selected, and render correct textual summary when printing summary to PDF.
- Changes to Catalo Items editor to show grouping in the Template drop down.

https://bugzilla.redhat.com/show_bug.cgi?id=1590441

--- a/app/views/automation_manager/explorer.html.haml
+++ b/app/views/automation_manager/explorer.html.haml
@@ -11,7 +11,7 @@
 - elsif @configured_system_record
   #main_div
     = render :partial => "layouts/textual_groups_generic"
-- elsif @record.kind_of?(ConfigurationScript)
+- elsif is_template_record?
   #main_div
     = render(:partial => 'automation_manager/configuration_script', :locals => {:controller => "automation_manager"})
 - else
