--- a/app/views/catalog/_form_basic_info.html.haml
+++ b/app/views/catalog/_form_basic_info.html.haml
@@ -105,13 +105,12 @@
           :javascript
             miqSelectPickerEvent('manager_id', '#{url}')
       - if @edit[:new][:manager_id]
-        - opts = [["<#{_('Choose')}>", nil]] + @edit[:new][:available_templates]
         .form-group
           %label.col-md-2.control-label
-            = @edit[:new][:st_prov_type] == "generic_ansible_tower" ? _('Ansible Tower Job Template') : _('Container Template')
+            = @edit[:new][:st_prov_type] == "generic_ansible_tower" ? _('Ansible Tower Template') : _('Container Template')
           .col-md-8
             = select_tag('template_id',
-                          options_for_select(opts, @edit[:new][:template_id]),
+                          grouped_options_for_select(@edit[:new][:available_templates], @edit[:new][:template_id]),
                           "data-miq_sparkle_on" => true,
                           :class                => "selectpicker")
             :javascript
