--- a/app/views/catalog/_sandt_tree_show.html.haml
+++ b/app/views/catalog/_sandt_tree_show.html.haml
@@ -68,7 +68,7 @@
         - elsif @record.prov_type == "generic_ansible_tower"
           .form-group
             %label.col-md-3.control-label
-              = _('Ansible Tower Job Template')
+              = _('Ansible Tower Template')
             .col-md-9
               = h(@record.try(:job_template).try(:name))
         - elsif @record.prov_type == "generic_container_template"
