--- a/app/views/miq_request/_prov_field.html.haml
+++ b/app/views/miq_request/_prov_field.html.haml
@@ -87,11 +87,14 @@
             :sysprep_full_name, :sysprep_organization,
             :sysprep_product_id, :sysprep_computer_name,
             :sysprep_per_server_max_connections, :vm_description,
-            :vm_name, :wins_servers].include?(field)
+            :vm_name, :wins_servers, :sysprep_domain,
+            :sysprep_admin_password, :sysprep_product_key, :sysprep_locale_ui,
+            :sysprep_locale_input, :sysprep_locale_system, :sysprep_locale_user,
+            :sysprep_machine_object_ou].include?(field)
         .col-md-8
           - if @edit && field_hash[:display] == :edit && !@edit[:stamp_typ]
             -# Allow editing of the text field
-            - if [:root_password, :sysprep_password, :sysprep_domain_password].include?(field)
+            - if [:root_password, :sysprep_password, :sysprep_domain_password, :sysprep_admin_password].include?(field)
               = password_field_tag(field_id, options[field],
                                    :maxlength         => ViewHelper::MAX_NAME_LEN,
                                    :class             => "form-control",
@@ -113,7 +116,7 @@
                                "data-miq_observe" => {:interval => '.5', :url => url}.to_json)
           - else
             -# Just show the field value
-            - if [:root_password, :sysprep_password, :sysprep_domain_password].include?(field)
+            - if [:root_password, :sysprep_password, :sysprep_domain_password, :sysprep_admin_password].include?(field)
               - unless options[field].nil?
                 - options[field].length.times do
                   *
