Changes to use new subclass to show 'Workflow' & 'Job' templates in UI
Reverted some of the changes that were made to use https://github.com/ManageIQ/manageiq/pull/17580 and adjusted code to use subclass in https://github.com/ManageIQ/manageiq/pull/17659

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1590441
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1468339

--- a/app/views/layouts/print/textual_summary.html.haml
+++ b/app/views/layouts/print/textual_summary.html.haml
@@ -3,7 +3,7 @@
   = render :partial => "#{controller}/main_configuration_profile"
 - elsif @record.kind_of?(ManageIQ::Providers::AutomationManager::InventoryGroup)
   = render :partial => "#{controller}/main_inventory_group"
-- elsif is_template_record?
+- elsif @record.kind_of?(ManageIQ::Providers::AutomationManager::ConfigurationWorkflow) || @record.kind_of?(ConfigurationScript)
   = render :partial => "#{controller}/configuration_script"
 - else
   = render :partial => "layouts/textual_groups_generic"
