Pass the variable with the new available catalogs to angular form
Pass the variable for editing catalogs' names to be able to display
also tenants and their ancestors names in the drop down menu while
creating a new Catalog Item.

--- a/app/views/catalog/_st_angular_form.html.haml
+++ b/app/views/catalog/_st_angular_form.html.haml
@@ -73,5 +73,6 @@
 :javascript
   ManageIQ.angular.app.value('catalogItemFormId', '#{@record.id || "new"}');
   ManageIQ.angular.app.value('currentRegion', '#{@current_region}');
+  ManageIQ.angular.app.value('allCatalogsNames', #{@available_catalogs});
   miq_bootstrap('#form_div');
 
