Unify Playbook and Tower service page layout

--- a/app/views/service/_svcs_show.html.haml
+++ b/app/views/service/_svcs_show.html.haml
@@ -11,6 +11,10 @@
         - if retirement_job
           = miq_tab_header("retirement") do
             = _("Retirement")
+      -if @record.type == "ServiceAnsibleTower"
+        - job = @record.try(:job)
+        = miq_tab_header("tower_job") do
+          = _("Job")
     .tab-content
       = miq_tab_content("details", 'default', :class => 'cm-tab') do
         = render :partial => "layouts/textual_groups_generic"
@@ -34,6 +38,13 @@
               = _('VMs')
             - if @view
               = render :partial => "layouts/gtl", :locals => {:view => @view, :no_flash_div => true}
+      - if @record.type == "ServiceAnsibleTower"
+        = miq_tab_content("tower_job", 'default', :class => 'cm-tab') do
+          = render :partial => "layouts/textual_groups_tabs", :locals => {:textual_group_list => textual_tower_job_group_list, :tab_id => "tower_job"}
+          - if job
+            %ansible-raw-stdout#service_detail_ansible_tower_job{'task-id' => @record.job.raw_stdout_via_worker(nil, 'html')}
+            :javascript
+              miq_bootstrap('#service_detail_ansible_tower_job');
 
       - if @record.type == "ServiceAnsiblePlaybook"
         = miq_tab_content("provisioning", 'default', :class => 'cm-tab') do
