AWS S3 Database Backups
Add support for Database Backups to be run and stored on AWS S3.
Similar to existing support for NFS and Samba.  Requires AWS credentials.

Note that we still need to add a drop-down for "Region" when S3 is selected.
For now that is hard-coded.

--- a/app/views/ops/_diagnostics_database_tab.html.haml
+++ b/app/views/ops/_diagnostics_database_tab.html.haml
@@ -88,12 +88,12 @@
                               :ng_model_uri_prefix => "vm.diagnosticsDatabaseModel.uri_prefix",
                               :uri_prefix_display  =>  "{{vm.diagnosticsDatabaseModel.uri_prefix}}://"}
 
-  %auth-credentials{'ng-if'                => 'vm.sambaBackup()',
+  %auth-credentials{'ng-if'                => 'vm.credsProtocol()',
                     'form-model'           => 'vm.diagnosticsDatabaseModel',
                     'model-copy'           => 'vm.modelCopy',
                     'prefix'               => '{{vm.prefix}}',
-                    'user-required'        => 'vm.sambaRequired(vm.diagnosticsDatabaseModel.log_userid)',
-                    'password-required'    => 'vm.sambaRequired(vm.diagnosticsDatabaseModel.log_password)',
+                    'user-required'        => 'vm.credsRequired(vm.diagnosticsDatabaseModel.log_userid)',
+                    'password-required'    => 'vm.credsRequired(vm.diagnosticsDatabaseModel.log_password)',
                     'enable-valid-button'  => 'vm.canValidateBasicInfo()',
                     'validate'             => 'vm.validateClicked',
                     'new-record'           => true}
