--- a/app/views/ops/_schedule_form_filter.html.haml
+++ b/app/views/ops/_schedule_form_filter.html.haml
@@ -109,10 +109,10 @@
                               :uri_prefix_display  =>  "{{scheduleModel.uri_prefix}}://"}
 
         = render :partial => "layouts/angular-bootstrap/auth_credentials_angular_bootstrap",
-                 :locals  => {:ng_show           => "sambaBackup()",
+                 :locals  => {:ng_show           => "credsProtocol()",
                               :ng_model          => "scheduleModel",
-                              :ng_reqd_userid    => "sambaRequired(scheduleModel.log_userid)",
-                              :ng_reqd_password  => "sambaRequired(scheduleModel.log_password)",
+                              :ng_reqd_userid    => "credsRequired(scheduleModel.log_userid)",
+                              :ng_reqd_password  => "credsRequired(scheduleModel.log_password)",
                               :userid_disabled   => "scheduleModel.uri_prefix == 'nfs'",
                               :password_disabled => "scheduleModel.uri_prefix == 'nfs'",
                               :validate_url      => "log_depot_validate",
