Allow to save multiple tag categories in chargeback controller
@edit[:cb_assign][:tags] as you can see in
code(@edit[:cb_assign][cb_assign_key]) is bringing
selected chargeback rates for tags in selected tag category which is
stored in @edit[:new][:cbtag_cat]

to keep selected chargeback rates for any count of tag categories
we need to extend @edit[:cb_assign][:tags]  to
@edit[:cb_assign][:tags] [category_id]  and this hash can
keep multiple chargeback rates across any count of
tag categories.

we need to update code when chargeback rate is
selected (  in method cb_assign_params_to_edit called
controller action cb_assign_field_changed) and then
when we want to save this selection of chargeback rates
in cb_assign_update.

--- a/app/views/chargeback/_cb_assignments.html.haml
+++ b/app/views/chargeback/_cb_assignments.html.haml
@@ -90,7 +90,7 @@
               %th= _('Name')
               %th= _('Rate')
           %tbody
-            - @edit[:cb_assign][:tags].invert.sort_by { |a| a.first.downcase }.each do |tag, id|
+            - @edit[:cb_assign][:tags][@edit[:new][:cbtag_cat].to_i].invert.sort_by { |a| a.first.downcase }.each do |tag, id|
               %tr
                 %td
                   = h(tag)
