Prevent double submit in Dialog Editor
Fixes: https://bugzilla.redhat.com/show_bug.cgi?id=1602848

First I've tried using a directive ngDblclick (https://docs.angularjs.org/api/ng/directive/ngDblclick#ngDblclick-info), which didn't help.

Disabling the button after click did the magic

--- a/app/views/miq_ae_customization/editor.html.haml
+++ b/app/views/miq_ae_customization/editor.html.haml
@@ -20,7 +20,8 @@
     %dialog-editor{'tree-selector-data' => 'vm.treeSelectorData', 'tree-selector-lazy-load' => 'vm.lazyLoad'}
     .pull-right
       %button.btn.btn-primary{"ng-click" => "vm.saveDialogDetails()",
-                              "ng-disabled" => "!vm.DialogValidation.dialogIsValid(vm.DialogEditor.data.content)",
+                              "ng-disabled" => "!vm.DialogValidation.dialogIsValid(vm.DialogEditor.data.content) || vm.saveButtonDisabled",
+                              "ng-dblclick" => "return false;",
                               "ng-attr-title" => "{{vm.DialogValidation.invalid.message}}",
                               :type => "button"}= _("Save")
       %button.btn.btn-default{"ng-click" => "vm.dismissChanges()",
