Allow Vm to open a url after a dialog is submitted
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1602023

--- a/app/views/shared/dialogs/_dialog_provision.html.haml
+++ b/app/views/shared/dialogs/_dialog_provision.html.haml
@@ -50,4 +50,5 @@
                 :finish_submit_endpoint => finish_submit_endpoint,
                 :api_submit_endpoint    => api_submit_endpoint,
                 :api_action             => api_action,
-                :cancel_endpoint        => cancel_endpoint}
+                :cancel_endpoint        => cancel_endpoint,
+                :open_url               => open_url}
