--- a/app/views/shared/dialogs/_dialog_user.html.haml
+++ b/app/views/shared/dialogs/_dialog_user.html.haml
@@ -27,4 +27,5 @@
   ManageIQ.angular.app.value('apiSubmitEndpoint', '#{api_submit_endpoint}');
   ManageIQ.angular.app.value('apiAction', '#{api_action}');
   ManageIQ.angular.app.value('cancelEndpoint', '#{cancel_endpoint}');
+  ManageIQ.angular.app.value('openUrl', '#{open_url}');
   miq_bootstrap('.wrapper');
