Floating Ip -> Floating IP

--- a/app/views/network_topology/show.html.haml
+++ b/app/views/network_topology/show.html.haml
@@ -22,7 +22,7 @@
       %kubernetes-topology-icon{tooltipOptions, :kind => "FloatingIp"}
         %label
           %i.ff.ff-floating-ip
-          = _("Floating Ips")
+          = _("Floating IPs")
       %kubernetes-topology-icon{tooltipOptions, :kind => "CloudNetwork"}
         %label
           %i.ff.ff-cloud-network
