GO Edit Screen: Add buttonText to file input button

--- a/app/views/static/generic_object/custom-image-component.html.haml
+++ b/app/views/static/generic_object/custom-image-component.html.haml
@@ -40,4 +40,4 @@
                         "ng-model"  => "vm.changeImage"}
 
 :javascript
-  $(":file").filestyle({placeholder: __("No file chosen"), icon: false});
+  $(":file").filestyle({placeholder: __("No file chosen"), buttonText: __("Choose File"), icon: false});
