--- a/app/views/dashboard/login.html.haml
+++ b/app/views/dashboard/login.html.haml
@@ -7,7 +7,7 @@
   .row
     .col-md-12
       #brand
-        %img{:src => image_path("layout/brand.svg"), :alt => "ManageIQ"}
+        %img{:src => ::Settings.server.custom_brand ? '/upload/custom_brand.png' : image_path("layout/brand.svg"), :alt => "ManageIQ"}
 
     .col-md-6.col-lg-5.login
       .form-horizontal#login_div
