--- a/app/views/ops/_settings_custom_logos_tab.html.haml
+++ b/app/views/ops/_settings_custom_logos_tab.html.haml
@@ -24,7 +24,7 @@
         %label.col-md-2.control-label
           = _("Use Custom Logo Image")
         .col-md-8
-          = check_box_tag("server_uselogo", true, @edit[:new][:server][:custom_logo], :data => {:on_text => 'Yes', :off_text => 'No'})
+          = check_box_tag("server_uselogo", true, @edit[:new][:server][:custom_logo], :data => {:on_text => _('Yes'), :off_text => _('No')})
   %hr
   %h3= _("Custom Login & 'About' Screen Background Image")
   - if File.exist?(@login_logo_file)
@@ -58,7 +58,37 @@
         %label.col-md-2.control-label
           = _("Use Custom Login & 'About' Screen Background Image")
         .col-md-8
-          = check_box_tag("server_useloginlogo", true, @edit[:new][:server][:custom_login_logo], :data => {:on_text => 'Yes', :off_text => 'No'})
+          = check_box_tag("server_useloginlogo", true, @edit[:new][:server][:custom_login_logo], :data => {:on_text => _('Yes'), :off_text => _('No')})
+  %hr
+  %h3=_("Custom Brand Image (Shown on top right of all screens and above login panel)")
+  - if File.exist?(@login_brand_file)
+    = image_tag("/upload/custom_brand.png?#{rand(99_999_999)}")
+    %br/
+    %br/
+  - else
+    = render :partial => 'layouts/info_msg', :locals => {:message => _("No custom login brand image has been uploaded yet.")}
+  = form_tag({:action    => "upload_login_brand"},
+             :class     => "form-horizontal",
+             :multipart => true,
+             :method    => :post) do
+    .form-group
+      .col-md-4
+        = render :partial => "shared/file_chooser", :locals => {:object_name => "brand", :method => "logo"}
+      .col-md-6
+        = submit_tag(_("Upload"), :class => "btn btn-default")
+        = _("* Requirements: File-type - PNG;")
+      .col-md-8
+        .spacer
+        = _("(Note: Login brand can be resized using /public/custom.css)")
+
+  - if File.exist?(@login_brand_file)
+    %br/
+    %form.form-horizontal
+      .form-group
+        %label.col-md-2.control-label
+          = _("Use Custom Brand Image")
+        .col-md-8
+          = check_box_tag("server_usebrand", true, @edit[:new][:server][:custom_brand], :data => {:on_text => _('Yes'), :off_text => _('No')})
   %hr
   %h3
     = _("Custom Login Panel Text (")
@@ -83,3 +113,4 @@
         miqInitBootstrapSwitch('server_uselogintext', "#{url}");
         miqInitBootstrapSwitch('server_uselogo', "#{url}");
         miqInitBootstrapSwitch('server_useloginlogo', "#{url}");
+        miqInitBootstrapSwitch('server_usebrand', "#{url}");
