--- a/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
+++ b/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
@@ -13,7 +13,7 @@
 %div{"ng-if" => defined?(security_protocol_hide) ? false : true}
   .form-group{"ng-class" => "{'has-error': angularForm.#{prefix}_security_protocol.$invalid}",
               "ng-if"    => "emsCommonModel.emstype == 'openstack' || " +                              |
-                            "emsCommonModel.emstype == 'openstack_infra' || " +
+                            "emsCommonModel.emstype == 'openstack_infra' || " +                        |
                             "emsCommonModel.emstype == 'telefonica' || " +                             |
                             "emsCommonModel.emstype == 'telefonica_infra' || " +                       |
                             "emsCommonModel.emstype == 'nuage_network' || " +                          |
@@ -25,7 +25,7 @@
                             "emsCommonModel.emstype == 'hawkular'"}                                    |
     %label.col-md-2.control-label{"for" => "#{prefix}_security_protocol"}
       = _('Security Protocol')
-    .col-md-8{"ng-if" => "emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra' || emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra' || emsCommonModel.emstype == 'vmware_cloud'"}
+    .col-md-8{"ng-if" => "emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra' || emsCommonModel.emstype == 'vmware_cloud'"}
       - prefix == "amqp" ? security_protocols = @amqp_security_protocols : security_protocols = @openstack_security_protocols
       = select_tag("#{prefix}_security_protocol",
                        options_for_select([["<#{_('Choose')}>", nil]] + security_protocols, :disabled => ["<#{_('Choose')}>", nil]),
@@ -36,7 +36,7 @@
                        "selectpicker-for-select-tag" => "",
                        "prefix"                      => prefix.to_s,
                        "reset-validation-status"     => "#{prefix}_auth_status")
-	.col-md-8{"ng-if" => "emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra'"}
+    .col-md-8{"ng-if" => "emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra'"}
       - prefix == "amqp" ? security_protocols = @amqp_security_protocols : security_protocols = @telefonica_security_protocols
       = select_tag("#{prefix}_security_protocol",
                        options_for_select([["<#{_('Choose')}>", nil]] + security_protocols, :disabled => ["<#{_('Choose')}>", nil]),
