--- a/app/views/physical_infra_topology/show.html.haml
+++ b/app/views/physical_infra_topology/show.html.haml
@@ -2,31 +2,51 @@
 .topology{'ng-controller' => "physicalInfraTopologyController as vm"}
   .legend
     %label#selected
-    %div{'ng-if' => "vm.kinds"}
-      %kubernetes-topology-icon{tooltipOptions, :kind => "PhysicalRack"}
-        %label
-          %i.pficon.pficon-enterprise
-          = _("Physical Racks")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "PhysicalChassis"}
-        %label
-          %i.pficon.pficon-cluster
-          = _("Physical Chassis")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "PhysicalServer"}
-        %label
-          %i.pficon.pficon-server-group
-          = _("Physical Servers")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "PhysicalSwitch"}
-        %label
-          %i.ff.ff-network-switch
-          = _("Physical Switches")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "Host"}
-        %label
-          %i.pficon.pficon-container-node
-          = _("Hosts")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "Vm"}
-        %label
-          %i.pficon.pficon-virtual-machine
-          = _("VMs")
+    %div{'ng-if' => "vm.filters"}
+      .topology-filter-group
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "PhysicalRack"}
+          %label
+            %i.pficon.pficon-enterprise
+            = _("Physical Racks")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "PhysicalChassis"}
+          %label
+            %i.pficon.pficon-cluster
+            = _("Physical Chassis")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "PhysicalServer"}
+          %label
+            %i.pficon.pficon-server-group
+            = _("Physical Servers")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "PhysicalSwitch"}
+          %label
+            %i.ff.ff-network-switch
+            = _("Physical Switches")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "Host"}
+          %label
+            %i.pficon.pficon-container-node
+            = _("Hosts")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "kind", "filter-value" => "Vm"}
+          %label
+            %i.pficon.pficon-virtual-machine
+            = _("VMs")
+      .topology-filter-group
+        %label#health_state
+          = _("Health State: ")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "status", "filter-value" => "Valid"}
+          %label
+            %i.fa.fa-circle
+            = _("Valid")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "status", "filter-value" => "Warning"}
+          %label
+            %i.fa.fa-circle
+            = _("Warning")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "status", "filter-value" => "Critical"}
+          %label
+            %i.fa.fa-circle
+            = _("Critical")
+        %kubernetes-topology-filter{tooltipOptions, "filter-property" => "status", "filter-value" => "Unknown,None"}
+          %label
+            %i.fa.fa-circle
+            = _("Unknown")
 
   .alert.alert-info.alert-dismissable
     %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"}
@@ -37,7 +57,7 @@
 
   = render :partial => "shared/topology/not_found_vm"
 
-  %kubernetes-topology-graph{:items => "vm.items", :relations => "vm.relations", :kinds => "vm.kinds"}
+  %kubernetes-topology-graph{:items => "vm.items", :relations => "vm.relations", :kinds => "vm.kinds", :filters => "vm.filters"}
 
 :javascript
   miq_bootstrap('.topology');
