--- a/app/views/cloud_volume_backup/volume_select.html.haml
+++ b/app/views/cloud_volume_backup/volume_select.html.haml
@@ -1,4 +1,4 @@
 #main_div
-  %cloud-volume-backup-form-component{'cloud-volume-backup-form-id' => @backup.id}
+  %cloud-volume-backup-form{'record-id' => @backup.id}
 :javascript
-  miq_bootstrap('cloud-volume-backup-form-component');
+  miq_bootstrap('cloud-volume-backup-form');
