--- a/app/views/static/cloud_volume_backup/volume_select.html.haml
+++ b/app/views/static/cloud_volume_backup/volume_select.html.haml
@@ -1,5 +1,6 @@
 %form#form_div{:name           => "angularForm",
                "miq-form"      => true,
+               'form-changed'  => true,
                "model"         => "vm.cloudVolumeBackupModel",
                "model-copy"    => "vm.modelCopy"}
   = render :partial => "layouts/flash_msg"
@@ -13,8 +14,7 @@
         = select_tag('volume_id',
                 '',
                 'ng-model'                   => 'vm.cloudVolumeBackupModel.volume',
-                'ng-options'                 => 'volume.name for volume in vm.volume_choices',
-                :id                          => 'volume_id',
+                'ng-options'                 => 'volume.name as volume.name for volume in vm.volume_choices',
                 :required                    => '',
                 'pf-select'                  => true)
 
