--- a/app/views/static/cloud_volume_backup/volume_select.html.haml
+++ b/app/views/static/cloud_volume_backup/volume_select.html.haml
@@ -14,7 +14,7 @@
         = select_tag('volume_id',
                 '',
                 'ng-model'                   => 'vm.cloudVolumeBackupModel.volume',
-                'ng-options'                 => 'volume.name as volume.name for volume in vm.volume_choices',
+                'ng-options'                 => 'volume.name for volume in vm.volume_choices track by volume.id',
                 :required                    => '',
                 'pf-select'                  => true)
 
