--- a/app/views/ops/_schedule_form_filter.html.haml
+++ b/app/views/ops/_schedule_form_filter.html.haml
@@ -108,6 +108,17 @@
                               :ng_model_uri_prefix => "scheduleModel.uri_prefix",
                               :uri_prefix_display  =>  "{{scheduleModel.uri_prefix}}://"}
 
+        %region{'ng-if' => 'regionSelect()'}
+          .form-group
+            %label.col-md-2.control-label
+              = _("AWS Region")
+            .col-md-8
+              - default_option = [_("<Choose>"), '']
+              = select_tag('log_aws_region', options_for_select([default_option] + @regions_options_for_select),
+                           "ng-model"                    => "scheduleModel.log_aws_region",
+                           "ng-required"                 => "regionRequired(scheduleModel.log_aws_region)",
+                           "selectpicker-for-select-tag" => "")
+
         = render :partial => "layouts/angular-bootstrap/auth_credentials_angular_bootstrap",
                  :locals  => {:ng_show           => "credsProtocol()",
                               :ng_model          => "scheduleModel",
