Added spinner after Category is selected on tagging screen
Stop spinner after transaction is complete.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1614437
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1601915

--- a/app/views/layouts/_tag_edit.html.haml
+++ b/app/views/layouts/_tag_edit.html.haml
@@ -22,7 +22,7 @@
             "class"                => "selectpicker")
           :javascript
             miqInitSelectPicker();
-            miqSelectPickerEvent("tag_cat", "#{url}", {beforeSend: true, complete: true});
+            miqSelectPickerEvent("tag_cat", "#{url}", {beforeSend: true});
         %th
           = render :partial => "layouts/tag_edit_cat_tags"
   = render :partial => 'layouts/tag_edit_assignments', :locals => {:entry => nil}
