javascript_dependencies helper - common tags + application.js
this is so that we have one helper to give us all the JS dependencies

and thus, any changes in load ordering can happen in that single helper

(the bigger context is that while transitioning from bower to npm, we will need to run some webpacked JS before our asset pipelined JS, but some after..)

(report_only didn't use common_packs, but ..may well already depend on it now, and will definitely in the future)

--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -6,11 +6,10 @@
     = favicon_link_tag
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag '/custom.css'
-    = javascript_include_tag 'application'
+    = javascript_dependencies
     - if Rails.env.development?
       = javascript_include_tag 'miq_debug'
       = stylesheet_link_tag 'miq_debug'
-    = javascript_common_packs
 
     = render :partial => 'layouts/i18n_js'
 
