--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,13 +12,12 @@
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag '/custom.css'
     = render :partial => "stylesheets/template50"
-    = javascript_include_tag 'application'
+    = javascript_dependencies
     - if Rails.env.development?
       = javascript_include_tag 'miq_debug'
       = stylesheet_link_tag 'miq_debug'
     = csrf_meta_tag
     = render :partial => 'layouts/i18n_js'
-    = javascript_common_packs
 
     :javascript
       ManageIQ.charts.provider = "#{Charting.backend}";
