--- a/app/views/layouts/report_only.html.haml
+++ b/app/views/layouts/report_only.html.haml
@@ -6,7 +6,7 @@
     = favicon_link_tag
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag '/custom.css'
-    = javascript_include_tag 'application'
+    = javascript_dependencies
     - if Rails.env.development?
       = javascript_include_tag 'miq_debug'
       = stylesheet_link_tag 'miq_debug'
