--- a/app/assets/stylesheets/about_modal_background.scss
+++ b/app/assets/stylesheets/about_modal_background.scss
@@ -12,23 +12,23 @@
   background-size: 100% 100%;
 }
 
-::-webkit-scrollbar {
+.about-visible-scrollbar::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+.about-visible-scrollbar-track::-webkit-scrollbar-track {
   box-shadow: inset 0 0 10px #f5f5f5;
   border-radius: 10px;
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+.about-visible-scrollbar-thumb::-webkit-scrollbar-thumb {
   background: #f5f5f5;
   border-radius: 10px;
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+.about-visible-scrollbar-hover::-webkit-scrollbar-thumb:hover {
   background: #b305500;
 }
