--- a/app/views/static/evacuate-form.html.haml
+++ b/app/views/static/evacuate-form.html.haml
@@ -35,7 +35,7 @@
         %input.form-control{:type         => "password",
                             :name         => "admin_password",
                             'ng-model'    => "vm.vmCloudModel.admin_password"}
-  #evacuate-select-destination-host{'ng-hide' => 'vm.vmCloudModel.auto_select_host'}
+  %div{'ng-hide' => 'vm.vmCloudModel.auto_select_host'}
     %h3
       = _('Select Destination Host')
     .form-horizontal
@@ -46,14 +46,3 @@
           %select{:name        => 'destination_host',
                   'ng-model'   => 'vm.vmCloudModel.host',
                   'ng-options' => 'host.name as host.name for host in vm.hosts track by host.id'}
-
-  %div_for_paging{'ng-controller'                    => "pagingDivButtonGroupController",
-                  'paging_div_buttons_state_enabled' => true,
-                  'paging_div_buttons_id'            => "angular_paging_div_buttons",
-                  'paging_div_buttons_type'          => "Submit"}
-
-  %hr
-  %div
-    %h3
-      {{vm.message}}
-
