RSS Widget details: render rss feed title rather thank cryptic name

--- a/app/views/report/_widget_show.html.haml
+++ b/app/views/report/_widget_show.html.haml
@@ -101,7 +101,7 @@
           .col-md-10
             %p.form-control-static
               - if @widget.resource
-                = h(@widget.resource.name)
+                = h(@widget.resource.title)
               - else
                 %span{:style => "color: red;"}
                   = "*** %s ***" % _("RSS Feed no longer exists")
