--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,5 @@
 /*
- *= require bower_components/c3/c3
+ *= require c3/c3
  *= require patternfly-bootstrap-treeview/dist/bootstrap-treeview.min
  *= require main
  *= require ./automate_import_export
