Add support for setting node icon background color in treeviews

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -1027,6 +1027,10 @@ table.table-compressed tr td .piechart {
   margin-left: 5px;
 }
 
+.treeview .icon.node-icon-background {
+  color: #fff;
+}
+
 /// ===================================================================
 /// end misc styling
 /// ===================================================================
