--- a/app/views/shared/views/ems_common/angular/_form.html.haml
+++ b/app/views/shared/views/ems_common/angular/_form.html.haml
@@ -122,6 +122,16 @@
                      "id"                          => "ems_api_version",
                      "checkchange"                 => "",
                      "selectpicker-for-select-tag" => "")
+    .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}", "ng-if" => "emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra'"}
+      %label.col-md-2.control-label{"for" => "ems_api_version"}
+        = _("API Version")
+      .col-md-8
+        = select_tag('api_version',
+                     options_for_select(@openstack_api_versions),
+                     "ng-model"                    => "emsCommonModel.api_version",
+                     "id"                          => "ems_api_version",
+                     "checkchange"                 => "",
+                     "selectpicker-for-select-tag" => "")
 
     .form-group{"ng-class" => "{'has-error': angularForm.vmware_cloud_api_version.$invalid}", "ng-if" => "emsCommonModel.emstype == 'vmware_cloud'"}
       %label.col-md-2.control-label{"for" => "ems_api_version"}
@@ -144,8 +154,28 @@
                             "name"                    => "provider_region",
                             "ng-model"                => "emsCommonModel.provider_region",
                             "checkchange"             => ""}
+    .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}",
+                "ng-if"    => "emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra'"}
+      %label.col-md-2.control-label{"for" => "ems_region_input"}
+        = _('Region')
+      .col-md-4
+        %input.form-control{"type"                    => "text",
+                            "id"                      => "ems_region_input",
+                            "name"                    => "provider_region",
+                            "ng-model"                => "emsCommonModel.provider_region",
+                            "checkchange"             => ""}
 
     .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra')"}
+      %label.col-md-2.control-label{"for" => "ems_keystone_domain_id"}
+        = _('Keystone V3 Domain ID')
+      .col-md-4
+        %input.form-control{"type"        => "text",
+                            "id"          => "ems_keystone_domain_id",
+                            "name"        => "keystone_v3_domain_id",
+                            "ng-model"    => "emsCommonModel.keystone_v3_domain_id",
+                            "required"    => true,
+                            "checkchange" => ""}
+    .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'telefonica' || emsCommonModel.emstype == 'telefonica_infra')"}
       %label.col-md-2.control-label{"for" => "ems_keystone_domain_id"}
         = _('Keystone V3 Domain ID')
       .col-md-4
@@ -176,6 +206,16 @@
                      "id"                          => "ems_infra_provider_id",
                      "checkchange"                 => "",
                      "selectpicker-for-select-tag" => "")
+    .form-group{"ng-class" => "{'has-error': angularForm.provider_id.$invalid}", "ng-if" => "emsCommonModel.emstype == 'telefonica' && emsCommonModel.telefonica_infra_providers_exist"}
+      %label.col-md-2.control-label{"for" => "ems_infra_provider_id"}
+        = _("Openstack Infra Provider")
+      .col-md-8
+        = select_tag('provider_id',
+                      options_for_select([["<#{_('blank')}>", nil]] + @openstack_infra_providers.sort_by { |name, _name| name }),
+                      "ng-model"                    => "emsCommonModel.provider_id",
+                      "id"                          => "ems_infra_provider_id",
+                      "checkchange"                 => "",
+                      "selectpicker-for-select-tag" => "")
 
     .form-group{"ng-class" => "{'has-error': angularForm.zone.$invalid}"}
       %label.col-md-2.control-label{"for" => "ems_zone"}
@@ -200,6 +240,17 @@
                        "required"                    => "",
                        "selectpicker-for-select-tag" => "")
     .form-group{"ng-if" => "emsCommonModel.emstype == 'openstack'"}
+      %label.control-label.col-md-2{"for" => "ems_tenant_mapping_enabled"}
+        = _('Tenant Mapping Enabled')
+      .col-md-8
+        %input{"bs-switch"   => "",
+               :data         => {:on_text => 'Yes', :off_text => 'No', :size => 'mini'},
+               "type"        => "checkbox",
+               "id"          => "ems_tenant_mapping_enabled",
+               "name"        => "tenant_mapping_enabled",
+               "checkchange" => "true",
+               "ng-model"    => "emsCommonModel.tenant_mapping_enabled"}
+    .form-group{"ng-if" => "emsCommonModel.emstype == 'telefonica'"}
       %label.control-label.col-md-2{"for" => "ems_tenant_mapping_enabled"}
         = _('Tenant Mapping Enabled')
       .col-md-8
